--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
+<html>
+  <title>
+  Cleaner Water In Africa
+  </title>
+  
+  <body>
+    <h1>Pls send Help</h1>
+  </body>
+  
+  <style>
+body{
+  background-color:blue;
+    }
+    
+    text-align:center;
+    
+  </style>
 
+</html>
