--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
   </title>
   
   <body>
-    <h1>Pls send Help</h1>
+    <h1>
+      <center> Pls send Help</center>
+    </h1>
   </body>
   
   <style>
 body{
   background-color:blue;
     }
-    
-    text-align:center;
     
   </style>
 
