--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   
   <body>
     <h1>
-      <center> Pls send Help</center>
+    <style>
+p { text-align:center; }
+</style>
     </h1>
   </body>
   
