--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
   </title>
   
   <body>
-    <h1>Pls send Help</h1>
+    <h1>How to Clean Water Sustainablly in Africa</h1>
   </body>
   
   <style>
 body{
-  background-color:blue;
+  background-color:#1a53ff;
     }
     
-    text-align:center;
+
     
   </style>
 
