--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
   </title>
   
   <body>
-    <h1>How to Clean Water Sustainablly in Africa</h1>
+    <p align="right" background-color="#1a53ff"><h1>How to Clean Water Sustainablly in Africa</h1></p>
+   
   </body>
   
   <style>
 body{
-  background-color:#1a53ff;
+  background-color:white;
     }
     
 
