--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <html>
+  <head>
+    <style>
+      p {
+          background-color: "#1a53ff";
+        }
+    </style>
+  </head>
   <title>
   Cleaner Water In Africa
   </title>
   
   <body>
-    <p align="right" background-color="#1a53ff"><h1>How to Clean Water Sustainablly in Africa</h1></p>
+    <p align="centre"><h1>How to Clean Water Sustainablly in Africa</h1></p>
    
   </body>
   
