--- a/index.html
+++ b/index.html
@@ -11,17 +11,11 @@
   </title>
   
   <body>
+    <div>
     <p align="centre"><h1>How to Clean Water Sustainablly in Africa</h1></p>
-   
+    </div>
   </body>
   
-  <style>
-body{
-  background-color:white;
-    }
-    
-
-    
-  </style>
+ 
 
 </html>
