--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 <html>
   <head>
     <style>
+      h1 {
+          background-color: green;
+          }
+      div {
+          background-color: lightblue;
+          }
       p {
-          background-color: "#1a53ff";
+          background-color: yellow;
         }
     </style>
+    <title>Cleaner Water in Africa</title>
   </head>
-  <title>
-  Cleaner Water In Africa
-  </title>
   
   <body>
     <div>
-    <p align="centre"><h1>How to Clean Water Sustainablly in Africa</h1></p>
+    <p>How to Clean Water Sustainablly in Africa</p>
     </div>
   </body>
-  
- 
-
 </html>
