--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
           background-color: lightblue;
           }
       p {
-          background-color: yellow;
+          background-color: #1a53ff;
         }
     </style>
     <title>Cleaner Water in Africa</title>
@@ -16,7 +16,7 @@
   
   <body>
     <div>
-    <p>How to Clean Water Sustainablly in Africa</p>
+    <p align="center">How to Clean Water Sustainablly in Africa</p>
     </div>
   </body>
 </html>
