--- a/index.html
+++ b/index.html
@@ -9,14 +9,25 @@
           }
       p {
           background-color: #1a53ff;
+          font-size: 18px;
+          align: center;
         }
+      .paragraph1 {
+        background-color: white;
+        font-size: 13px;
+       }
+      .paragraph2 {
+        background-color: green;
+        font-size: 11px;
+      }
     </style>
     <title>Cleaner Water in Africa</title>
   </head>
   
   <body>
     <div>
-    <p align="center">How to Clean Water Sustainablly in Africa</p>
+    <p class="paragraph1">How to Clean Water Sustainablly in Africa</p>
+    <p class="paragraph1">blah- blah-</p>
     </div>
   </body>
 </html>
