--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           align: center;
         }
       .paragraph1 {
-        background-color: white;
+        background-color: #1a53ff;
         font-size: 13px;
        }
       .paragraph2 {
