--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
           background-color: lightblue;
           }
       p {
-          background-color: #1a53ff;
+          background-color: white;
           font-size: 18px;
-          align: center;
+          text-align: center;
         }
       .paragraph1 {
         background-color: #1a53ff;
-        font-size: 13px;
+        font-size: 24px;
        }
       .paragraph2 {
-        background-color: green;
+        background-color: white;
         font-size: 11px;
       }
     </style>
@@ -27,7 +27,7 @@
   <body>
     <div>
     <p class="paragraph1">How to Clean Water Sustainablly in Africa</p>
-    <p class="paragraph1">blah- blah-</p>
+    <p class="paragraph2">blah- blah-</p>
     </div>
   </body>
 </html>
