--- a/index.html
+++ b/index.html
@@ -14,11 +14,15 @@
         }
       .paragraph1 {
         background-color: #1a53ff;
+        font-size: 32px;
+       }
+       .paragraph2 {
+        background-color: white;
         font-size: 24px;
        }
-      .paragraph2 {
-        background-color: white;
-        font-size: 11px;
+      .paragraph3 {
+        background-color: yellow;
+        font-size: 14px;
       }
     </style>
     <title>Cleaner Water in Africa</title>
@@ -27,7 +31,8 @@
   <body>
     <div>
     <p class="paragraph1">How to Clean Water Sustainablly in Africa</p>
-    <p class="paragraph2">blah- blah-</p>
+    <p class="paragraph2">Main Meet and Potato goes here </p>
+    <p class="paragraph3">References : blah-</p>
     </div>
   </body>
 </html>
