--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
   <head>
     <style>
       h1 {
-          background-color: green;
+          background-color: white;
           }
       div {
-          background-color: lightblue;
+          background-color: white;
           }
       p {
           background-color: white;
