--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
         }
       .paragraph1 {
         background-color: #1a53ff;
-        font-size: 32px;
+        font-size: 84px;
        }
        .paragraph2 {
         background-color: white;
         font-size: 24px;
        }
       .paragraph3 {
-        background-color: yellow;
-        font-size: 14px;
+        background-color: white;
+        font-size: 24px;
       }
     </style>
     <title>Cleaner Water in Africa</title>
@@ -30,7 +30,11 @@
   
   <body>
     <div>
-    <p class="paragraph1">How to Clean Water Sustainablly in Africa</p>
+    <p class="paragraph1">How to Clean Water Sustainablly in Africa. 
+      Our project reaserched the possibillity of using plants to filter water in African rivers. 
+      We chose this topic because most water filtration sytems are temporary and use harsh chemicals.
+      We wanted to find a way to create permanent solutions without destroying the enviornment.
+      </p>
     <p class="paragraph2">Main Meet and Potato goes here </p>
     <p class="paragraph3">References : blah-</p>
     </div>
