--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
   
   <body>
     <div>
-    <p class="paragraph1">How to Clean Water Sustainablly in Africa. 
+    <p class="paragraph1">
+      How to Clean Water Sustainablly in Africa. 
       Our project reaserched the possibillity of using plants to filter water in African rivers. 
       We chose this topic because most water filtration sytems are temporary and use harsh chemicals.
       We wanted to find a way to create permanent solutions without destroying the enviornment.
