--- a/index.html
+++ b/index.html
@@ -32,11 +32,10 @@
     <div>
     <p class="paragraph1">
       How to Clean Water Sustainablly in Africa. 
-      Our project reaserched the possibillity of using plants to filter water in African rivers. 
-      We chose this topic because most water filtration sytems are temporary and use harsh chemicals.
-      We wanted to find a way to create permanent solutions without destroying the enviornment.
       </p>
-    <p class="paragraph2">Main Meet and Potato goes here </p>
+    <p class="paragraph2"> Our project reaserched the possibillity of using plants to filter water in African rivers. 
+      We chose this topic because most water filtration sytems are temporary and use harsh chemicals.
+      We wanted to find a way to create permanent solutions without destroying the enviornment. </p>
     <p class="paragraph3">References : blah-</p>
     </div>
   </body>
