--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
       
       div {
           background-color: white;
-  
-     
+        h1 {
+         background-color: white;
+        }
+
       .paragraph1 {
         background-color: #1a53ff;
         font-size: 84px;
