--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
         h1 {
          background-color: white;
         }
+              
+      p {
+          background-color: white;
+          font-size: 18px;
+          text-align: center;
+       }
+  
 
       .paragraph1 {
         background-color: #1a53ff;
