--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       .paragraph1 {
         background-color: #1a53ff;
         font-size: 84px;
+         text-align: center;
        }
        .paragraph2 {
         background-color: white;
