--- a/index.html
+++ b/index.html
@@ -43,49 +43,7 @@
       We wanted to find a way to create permanent solutions without destroying the enviornment. </p>
     <p class="paragraph3">
     
-  What’s Wrong     The biggest water pollutant in African rivers is wastewater and all the toxins that come with it. This 
-      problem is very large and complicated. Most villages water supplies depend on rivers for there refillment. On any given 
-      river there are several villages and they all drink and use the water from the river. Most of the rainwater flows into 
-      these rivers and collects there. Most people in the villages assume that the water will simply flow away and never be 
-      seen by anyone ever again. But they are wrong, one village might get their cattle to drink from the river another village 
-      further downstream will wash their cloths in the river and by the time it reaches the third village it is dirty and 
-      contaminated.  Many people don’t know about this problem and don’t realize that they’re creating it. The toxins in the 
-      water are very similar between different rivers and places, they usually include, ammonia, household chemicals such as 
-      soap and cleaning solutions, organic contaminants, and different wastewater such as garbage and waste water. Ways to tell 
-      if the water is clean or not is by the pH level, the colour of the water, measure what microorganisms and bacteria are in 
-      the water. It is important that you know if the water is pure or not so you don't get poisoned or really sick. You can get 
-      sick if the acidic level is too high or too low and if it is to dirty it can also make you sick. 70% of the world is water 
-      but 2.5% is fresh. The rest is saline and ocean based. While 2.5% is fresh 1% is has easy access
- 
- 
- 
-Our plan     Our plan is to educate people on sustainable ways to clean rivers and better ways to dispose of their wastewater and solid 
-      waste. Our group is creating a website because it is easy to display to people and is accessible to anyone anywhere in 
-      the world. This allows us to reach the most people, instead of simply showing it to a few classes and only students at 
-      our school people anywhere can see it and share the message of better cleaner water without chemicals or biohazards.
- 
- 
- 
-What we Found      We researched different ways of filtering water using water plants and shoreline plants, we found out that many plants 
-      have different helpful properties when it comes to filtering and cleaning water. The plants we found were Common 
-      water Hyacinth, Golden Cannas,  other Canna Hybrids and Lanceleaf  Frogfruit. These are all plants that grow on 
-      the shoreline. All of these plants have been shown to filter water in laboratory and field conditions. These plants filter 
-      water by absorbing contaminants such as nitrogen and ammonia. The water Hyacinth can also filter water by creating 
-      microorganisms in its roots that cling to floating organic matter making it easier to dissolve. When the plants absorb 
-      chemicals and things like nitrogen they make the river cleaner by balancing out the minerals and chemicals in the water. 
-      However these plants can not be used alone actual plants would make cleaner water.
- 
-Conclusions      In the end we concluded that the water crisis is quite severe because of the lack of education and good sanitation 
-      practices in small African villages. We concluded that there are ways to supplement the water filtration using 
-      plants. These plants can naturally filter out some harsh chemicals and floating organic matter. We found out that
-      these plants are abundant in other places of the world such as South America. We learned the villagers needed to be
-      taught better about wastewater management and treatment. We found out that these plants aren’t perfect and can’t filter
-      water completely. We learned that treatment plants are essential to water safety. We learned that pilot projects using 
-      plant filtration have already been done in Israel.
-
- 
- 
- 
+  What
 </p>
     </div>
   </body>
