--- a/index.html
+++ b/index.html
@@ -20,11 +20,15 @@
        .paragraph2 {
         background-color: white;
         font-size: 24px;
-         text-align: left;
        }
       .paragraph3 {
         background-color: white;
         font-size: 24px;
+        text-align: left;
+      }
+      .paragraph4 {
+        background-color: yellow;
+        font-size: 16px;
       }
     </style>
     <title>Cleaner Water in Africa</title>
@@ -86,6 +90,9 @@ Conclusions      In the end we concluded that the water crisis is quite severe b
       water completely. We learned that treatment plants are essential to water safety. We learned that pilot projects using 
       plant filtration have already been done in Israel.
 </p>
+      
+      <p class="paragraph4">References : </p>
+      
     </div>
   </body>
 </html>
