--- a/index.html
+++ b/index.html
@@ -90,8 +90,15 @@ Conclusions      In the end we concluded that the water crisis is quite severe b
       water completely. We learned that treatment plants are essential to water safety. We learned that pilot projects using 
       plant filtration have already been done in Israel.
 </p>
+        <br/>
+      <br/>
       
-      <p class="paragraph4">References : </p>
+      <p class="paragraph4">http://homeguides.sfgate.com/aquatic-plants-purify-water-43531.html
+  https://www.youtube.com/watch?v=dZNJd-pLqiA
+Blood:Water
+https://www.charitywater.org/
+Generosity.org
+https://lifestraw.eartheasy.com/products/lifestraw-carbon-credits: </p>
       
     </div>
   </body>
