--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           text-align: center;
        }
       .paragraph1 {
-        background-color: #1a53ff;
+        background-color: #4db8ff;
         font-size: 84px;
          text-align: center;
        }
@@ -27,7 +27,7 @@
         text-align: left;
       }
       .paragraph4 {
-        background-color: yellow;
+        background-color: white;
         font-size: 16px;
       }
     </style>
