--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
       We wanted to find a way to create permanent solutions without destroying the enviornment. </p>
     <p class="paragraph3">
     
-  What’s Wrong     The biggest water pollutant in African rivers is wastewater and all the toxins that come with it. This 
+  What’s Wrong    
+      <br/>
+      The biggest water pollutant in African rivers is wastewater and all the toxins that come with it. This 
       problem is very large and complicated. Most villages water supplies depend on rivers for there refillment. On any given 
       river there are several villages and they all drink and use the water from the river. Most of the rainwater flows into 
       these rivers and collects there. Most people in the villages assume that the water will simply flow away and never be 
@@ -56,8 +58,12 @@
       if the water is clean or not is by the pH level, the colour of the water, measure what microorganisms and bacteria are in 
       the water. It is important that you know if the water is pure or not so you don't get poisoned or really sick. You can get 
       sick if the acidic level is too high or too low and if it is to dirty it can also make you sick. 70% of the world is water 
-      but 2.5% is fresh. The rest is saline and ocean based. While 2.5% is fresh 1% is has easy access
- 
+      but 2.5% is fresh. The rest is saline and ocean based. While 2.5% is fresh. It’s important to have clean water because if 
+      it’s too dirty you could get really sick or even get waterborne diseases which are really bad for your body. Some examples 
+      of waterborne diseases are Cholera, and other serious illnesses such as Guinea Worm Disease,Typhoid, and Dysentery. 
+      These types of disease kill millions each year.
+ 
+
       <br/>
       <br/>
     
