--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <body>
     <div>
     <p class="paragraph1">
-      How to Clean Water Sustainablly in Africa. 
+      How to Clean Water Sustainably in Africa. 
       </p>
     <p class="paragraph2">
 What We Did
