--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <p class="paragraph2">
 What We Did
         <br/>
-      Our project reaserched the possibillity of using plants to filter water in African rivers. 
+      Our project researched the possibillity of using plants to filter water in African rivers. 
       We chose this topic because most water filtration sytems are temporary and use harsh chemicals.
       We wanted to find a way to create permanent solutions without destroying the enviornment. </p>
     <p class="paragraph3">
